:bug: fix: resolving header layout bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,5 @@
 main {
   width: 100%;
-  min-width: 37rem;
   display: flex;
   flex-direction: column;
   gap: 5rem;
